tests/error/misc_errors/return_not_annotated_none2.py
from tests.util import compile_guppy


@compile_guppy
def foo():
    def bar(x: int) -> int:
        return x
