tests/error/misc_errors/return_not_annotated_none2.err
Error: Missing type annotation (at $FILE:5:0)
  | 
3 | 
4 | @compile_guppy
5 | def foo():
  | ^^^^^^^^^^
  | ...
7 |         return x
  | ^^^^^^^^^^^^^^^^ Return type must be annotated

Help: Looks like `foo` doesn't return anything. Consider annotating it with `->
None`.

Guppy compilation failed due to 1 previous error
